fixed wrong margins

--- a/assets/css/common/post-single.css
+++ b/assets/css/common/post-single.css
@@ -45,6 +45,7 @@
 }
 
 hr {
+    margin: calc(var(--gap) * 0.5) 0 calc(var(--gap) * 1) 0 !important;
     border: 4px solid var(--primary);
     border-radius: 4px;
     box-shadow: 0 2px 6px var(--shadow-color);
@@ -52,7 +53,7 @@ hr {
 
 .page-header,
 .post-header {
-    margin: 0 auto var(--content-gap) auto;
+    margin: 0 auto 0 auto;
 }
 
 /* .post-header {
@@ -70,8 +71,7 @@ hr {
 }
 
 .post-meta {
-    margin-top: calc(var(--gap)*0.5);
-    margin-bottom: calc(var(--gap)*0.5);
+    margin-top: calc(var(--gap) * 0.5);
 }
 
 .post-meta,
@@ -367,13 +367,6 @@ td:active {
     margin: 20px 0;
     padding: 0 14px;
     border-inline-start: 3px solid var(--primary);
-}
-
-.post-content hr {
-    height: 4px;
-    margin: 0 !important;
-    background: var(--primary);
-    border-radius: var(--radius);
 }
 
 .post-content iframe {
